# Sofly

./: .gitignore  README.md  config.conf  index.html  install-poetry.ps1  package.json  pyproject.toml  requirements.txt  run-crawler.bash  run-crawler.ps1  run-tests  run.py  server.py
.data/: default_config.conf
.models/: sequential.llm.pkl  x_g_b_regressor.llm.pkl
crawler/: requirements.txt
crawler/src/: __main__.py  link_gatherer.py  util.py
crawler/src/asko/: asko_link_gatherer.py  asko_link_parser.py  util.py
crawler/src/beliani/: beliani_link_gatherer.py  beliani_link_parser.py
crawler/src/veneti/: veneti_link_gatherer.py  veneti_link_parser.py
llm/: requirements.txt
llm/data/: furniture_dataset.csv
llm/src/: __main__.py  util.py
llm/src/train/: gradient_boosting_regressor.py  linear_regression.py  neural_network_regressor.py  random_forest_regressor.py  xgb_regressor.py
public/: style.css
public/scripts/: dashboard.js  index.js  register.js  report-event.js
sites/: dashboard.html  index.html  insurance.html  register.html  report-event.html
sql/: tables.sql
src/: endpoints.py  sofly_endpoints.py  sofly_server.py
src/config/: __init__.py  config.py  config_loader.py  pyhocon_config_loader.py  sofly_config.py
src/data/: __init__.py  insurance.py  insurance_dto.py  user.py  user_dto.py
src/db/: __init__.py  db_client.py  insurance_abc_service.py  insurance_sofly_service.py  user_abc_service.py  user_sofly_service.py
src/endpoints/: __init__.py  api_endpoints.py  auth_api_endpoints.py  dashboard_endpoints.py  html_endpoints.py  report_event_endpoints.py  util.py
src/security/: __init__.py  jwt_security.py  sha256_encryptor.py
test/: data_class_test.py  user_service_test.py
