[tool.poetry]
name = "sofly"
version = "0.1.0"
description = "Web application for insurance companies to manage their insurance policies and claims."
authors = ["Lukáš Friedl <lukys3036@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
bs4 = "^0.0.2"
requests = "^2.32.3"
selenium = "^4.30.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
