[tool.poetry]
name = "sofly"
version = "0.1.0"
description = "Web application for insurance companies to manage their insurance policies and claims."
authors = ["Lukáš Friedl <lukys3036@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flask = {extras = ["async"], version = "^3.1.0"}
bs4 = "^0.0.2"
requests = "^2.32.3"
selenium = "^4.30.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
loguru = "^0.7.3"
pyhocon = "^0.3.61"
aiomysql = "^0.2.0"
pyjwt = "^2.10.1"
dbutils = "^3.1.0"
coverage = "7.8.0"
pytest = "^8.3.5"
tensorflow = "2.19.0"
tensorflow-io-gcs-filesystem = "0.31.0"
keras = "3.9.2"

[tool.poetry.group.web.dependencies]
flask = {extras = ["async"], version = "^3.1.0"}
loguru = "^0.7.3"
pyhocon = "^0.3.61"
aiomysql = "^0.2.0"
keras = "3.9.2"
dbutils = "^3.1.0"
pyjwt = "^2.10.1"
numpy = "2.0.0"
tensorflow = "2.19.0"
tensorflow-io-gcs-filesystem = "0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
